Functional Game - Lazy to Implement UI

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "styles.css">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="screen-container">
+
+        <div class="stats">
+            <div class></div>
+        </div>
+        
+        <div class="modal-container">
+            <div class = "announcer">
+                <p class = "announcer-text" id = "announcerText"> Waiting game to start...</p>
+            </div>
+            <div class="game-container">
+
+            </div>
+        </div>
+        <div class="stats">
+            <p>Placeholder</p>
+        </div>
+    </div>
+    
  <script src = "javascript.js"></script>   
 </body>
 </html>
